[gd_scene load_steps=9 format=3 uid="uid://bk52h8yc3wmls"]

[ext_resource type="Script" uid="uid://hvdjb55cj2jg" path="res://gallery_shooter/scripts/target.gd" id="1_liiet"]
[ext_resource type="Texture2D" uid="uid://mmjtvv7hb8be" path="res://gallery_shooter/assets/asteroid.png" id="2_m65hf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vf4b1"]
radius = 24.0

[sub_resource type="Animation" id="Animation_m65hf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_vf4b1"]
resource_name = "straight_left"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-1200, 0)]
}

[sub_resource type="Animation" id="Animation_liiet"]
resource_name = "straight_right"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1200, 0)]
}

[sub_resource type="Animation" id="Animation_pwnw7"]
resource_name = "wave_right"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(200, 150), Vector2(400, -150), Vector2(600, 150), Vector2(800, -150), Vector2(1200, 150)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ycesl"]
_data = {
&"RESET": SubResource("Animation_m65hf"),
&"straight_left": SubResource("Animation_vf4b1"),
&"straight_right": SubResource("Animation_liiet"),
&"wave_right": SubResource("Animation_pwnw7")
}

[node name="Target" type="Area2D"]
script = ExtResource("1_liiet")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_m65hf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_vf4b1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../CollisionShape2D")
libraries = {
&"": SubResource("AnimationLibrary_ycesl")
}

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
